--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <!-- Style CSS -->
     <link href="css/style.css" rel = "stylesheet">
 
-    <title>Hello, world!</title>
+    <title>collab-practice</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>collab-practice</h1>
 
-<h1> you allready did it</h1>
+
 
 
     <!-- Optional JavaScript; choose one of the two! -->
