--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap CSS -->
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+ 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -16,13 +16,10 @@
 
 
   <link rel="stylesheet" href="css/styles.css">
-  <title>Bootstrap Grid</title>
+  <title>Collab-practice</title>
 </head>
 
 <body>
-
-
-
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -44,11 +41,11 @@
       </div>
     </nav>
     <div class="row">
-      <div class="col-md-6 bg-Warning">
+      <div class="col-md-6 bg-Warning"id="left"  >
         column
       </div>
 
-      <div class="col-md-6 bg-primary">
+      <div class="col-md-6 bg-primary" id="right">
         column
       </div>
       <footer class="footer1">
